feat: Add comprehensive use cases document for League of Tech Mentors platform
feat: Create initial setup documentation for CRUD application and CLI program

feat: Implement database initialization script for Appwrite with Mermaid data model parsing

chore: Add development environment initialization script for Appwrite setup

feat: Create script for setting up initial Appwrite admin user with error handling

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-PUBLIC_APPWRITE_ENDPOINT=https://cloud.appwrite.io/v1
-PUBLIC_APPWRITE_PROJECT_ID=my-project-id
-PUBLIC_APPWRITE_PROJECT_NAME="My project name"
+PUBLIC_APPWRITE_ENDPOINT="http://localhost:8080/v1"
+PUBLIC_APPWRITE_PROJECT_ID=jtl-stem-net
+PUBLIC_APPWRITE_PROJECT_NAME="JTL STEM Network"
+
+APPWRITE_API_KEY=
+APPWRITE_DATABASE_ID=stem_network_db
