--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
   "type": "module",
   "dependencies": {
     "@appwrite.io/pink-icons": "^0.25.0",
+    "@mermaid-js/parser": "^0.6.3",
     "@sveltejs/adapter-node": "^5.2.12",
     "@tailwindcss/vite": "^4.1.3",
     "appwrite": "^21.0.0",
+    "dotenv": "^17.2.3",
+    "node-appwrite": "^21.1.0",
     "tailwindcss": "^4.1.3"
   }
 }
