--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "init:dev": "bash scripts/init-dev.sh",
     "init:appwrite": "node scripts/setup-appwrite.js",
-    "init:db": "node scripts/init-db.js"
+    "init:db": "node scripts/init-db.js",
+    "init:schema": "node scripts/generate-schema.js"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^4.0.0",
