feat: Add Python starter function with Appwrite integration
- Created a new Python starter function with a basic structure.
- Implemented a `/ping` endpoint that returns a "Pong" message.
- Added a default response for the root endpoint with useful links.
- Included a `.gitignore` file to exclude unnecessary files from version control.
- Added a `README.md` file with usage instructions and configuration details.
- Created a `requirements.txt` file to manage dependencies.
- Implemented the main function logic in `src/main.py` to interact with Appwrite's Users service.
- Introduced a TypeScript parser for Mermaid class diagrams to facilitate database synchronization.
- Developed a `sync_db.ts` script to read the data model and sync it with Appwrite's database.
- Added tests to validate the sync plan generation and relationships.

--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
     "init:dev": "bash scripts/init-dev.sh",
     "init:appwrite": "node scripts/setup-appwrite.js",
-    "init:db": "node scripts/init-db.js",
-    "init:schema": "node scripts/generate-schema.js"
+    "sync_db": "tsx scripts/sync_db.ts",
+    "init:schema": "node scripts/generate-schema.js",
+    "appwrite:login": "source .env && appwrite login --endpoint $PUBLIC_APPWRITE_ENDPOINT --email $APPWRITE_ADMIN_EMAIL --password $APPWRITE_ADMIN_PASSWORD"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^4.0.0",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@types/node": "^25.0.3",
     "prettier": "^3.5.3",
     "prettier-plugin-svelte": "^3.3.3",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.5.3",
     "vite": "^6.0.0"
   },
